feat: 完善登陆 功能，新增 govalidator验证器，补充逻辑代码

--- a/config.yaml
+++ b/config.yaml
@@ -3,11 +3,11 @@ mode: debug
 addr: 8088
 
 db:
-  name:
+  name: goblog
   host: 127.0.0.1
-  port: 3306
-  username:
-  password:
+  port: 3305
+  username: root
+  password: 123456
   charset: utf8mb4
   max_idle_cons: 10
   max_open_cons: 2
